# scribus-mcp

./: .dockerignore  .mcp.json  Dockerfile  LICENSE  README.md  pyproject.toml
scripts/: test_layout.py
src/scribus_mcp/: __init__.py  bridge.py  client.py  server.py
tests/: mock_scribus.py  test_bridge.py  test_client.py  test_server.py
