[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribus-mcp"
version = "0.1.0"
description = "MCP server for Scribus — create professional layouts programmatically"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
scribus-mcp = "scribus_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
