[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribus-mcp"
version = "0.1.0"
description = "MCP server for Scribus — create professional layouts programmatically"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
scribus-mcp = "scribus_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "SIM", "RUF", "S101", "PT"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]
"tests/mock_scribus.py" = ["D", "S101", "N802"]
"src/scribus_mcp/bridge.py" = ["E402"]
